--- a/Czech/main/Backup.apk/res/values-cs/strings.xml
+++ b/Czech/main/Backup.apk/res/values-cs/strings.xml
@@ -598,8 +598,27 @@ Uvolněte prostor nebo přeneste méně souborů."</string>
 <string name="err_acquire_system_service">Nelze spustit službu.</string>
   <string name="trans_button_exit">Ukončit</string>
   <string name="trans_button_stay">Zůstat</string>
-  <string name="trans_cancel_selection_message">Pokud ukončíte aplikaci Přenos, samotný přenos bude ukončen.</string>
+  <string name="trans_cancel_selection_message">Pokud ukončíte aplikaci Přenos, přenos bude přerušen.</string>
   <string name="trans_cancel_selection_title">Zůstat v Přenosu</string>
   <string name="trans_select_notification_message">Dotykem zobrazíte</string>
   <string name="trans_select_notification_title">Přenos pracuje...</string>
+  <string name="click_soft_ap_to_link">Vyberte hot-spot pro připojení</string>
+  <string name="confirm_exit_link">Ukončit</string>
+  <string name="confirm_exit_link_cancel">Zrušit</string>
+  <string name="confirm_exit_link_msg">Ukončení aplikace přeruší probíhající přenos. Budete muset nastavit připojení znovu. Chcete ukončit aplikaci?</string>
+  <string name="confirm_exit_link_title">přerušení přenosu</string>
+  <string name="connect_soft_ap_label">Připojování k zařízení...</string>
+  <string name="old_soft_name">Připojit pomocí QR kódu</string>
+  <string name="old_way">Můžete se připojit i pomocí QR kódu.</string>
+  <string name="recreate_soft_ap_tips">Stiskněte tlačítko pro další pokus.</string>
+  <string name="scan_soft_ap">Vyhledávání nového zařízení...</string>
+  <string name="scan_soft_ap_label">Připojte staré zařízení</string>
+  <string name="soft_ap_create_failed">Nebylo možné vytvořit hot-spot</string>
+  <string name="soft_ap_creating">Vytváření hot-spotu...</string>
+  <string name="trans_intro_desc_10">Stiskněte \ "Připojit pomocí QR kódu \" na novém zařízení a načtěte kód pro připojení.</string>
+  <string name="trans_intro_desc_gms">Pro velkou pravděpodobnost, že data Google aplikací nebudou obnoveny správně, budou všechny Google aplikace přeskočeny.</string>
+  <string name="trans_intro_question_10">%d. Nemůže najít hot-spot na starém zařízení?</string>
+  <string name="trans_intro_title_gms">Data Google aplikací:</string>
+  <string name="wait_link">Připojte vaše staré zařízení na tento hot-spot.</string>
+  <string name="waiting">Načítání...</string>
 </resources>
