--- a/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
@@ -478,5 +478,39 @@ ale obsah, který hledáte, není dostupný ve Vaší zemi."</string>
   <string name="using_theme_next_automatic_update">Automatické aktualizace</string>
   <string name="using_theme_next_automatic_update_summary">Aktualizovat stažená témata automaticky přes Wi-Fi</string>
   <string name="title_my_miwallpaper_resource">Mé živé pozadí</string>
-  <string name="title_my_miwallpaper_video_file_resource">Mé videopozadí</string>  
+  <string name="title_my_miwallpaper_video_file_resource">Mé videopozadí</string>
+  <string name="desktop_effects">Efekty domácí plochy</string>
+  <string name="find_more_font">Více</string>
+  <string name="float_wallpaper_is_here">Průhledné pozadí</string>
+  <string name="incall_show_apply">Profilové video pro odch. hovory</string>
+  <string name="incall_show_apply_fail">Nelze nastavit</string>
+  <string name="incall_show_apply_success">Aplikované. Pro deaktivaci této funkce jděte do Nastavení zvuku a vibrací.</string>
+  <string name="incall_show_apply_success_without_ringtone">Aplikované. Toto video nemá zvuk. Bude použity originální vyzvánění. Pro deaktivaci této funkce jděte do Nastavení zvuku a vibrací.</string>
+  <string name="incall_show_find_more">Více</string>
+  <string name="incall_show_not_set">Žádné video</string>
+  <string name="incall_show_remove">Odstranit profilové video</string>
+  <string name="incall_show_remove_dialog_message">Už jste nastavili profilové video pro odchozí hovory. Chcete jej odstranit?</string>
+  <string name="incall_show_remove_success">Profilové video odstraněno</string>
+  <string name="incall_show_title">Profilová videa</string>
+  <string name="mix_global_option">Všeobecné</string>
+  <string name="mix_global_option_des">Roletka, Telefon, SMS a ostatní části systému.</string>
+  <string name="mix_home_option_des">Tapeta a hodiny</string>
+  <string name="mix_icons_option_des">Ikony</string>
+  <string name="mix_lockscreen_option_des">Tapeta a hodiny</string>
+  <string name="mix_tip">Časti témat</string>
+  <string name="present_local_fonts">Moje písma</string>
+  <string name="set_home_wallpaper_failed">%s. Nemůže nastavit tapetu.</string>
+  <string name="theme_component_title_homepage">Domácí plocha</string>
+  <string name="title_my_miwallpaper_desktop_effects">Efekty domácí plochy</string>
+  <string name="transparent_wallpaper">průhledné pozadí</string>
+  <string name="transparent_wallpaper_apply_success">Nastavené. Můžete to změnit v Témata - Profil - Beta funkce.</string>
+  <string name="transparent_wallpaper_enable_success">Povoleno</string>
+  <string name="transparent_wallpaper_guide">Jděte do Témat</string>
+  <string name="transparent_wallpaper_guide_tip">Můžete nastavit průhledné pozadí.</string>
+  <string name="transparent_wallpaper_white_wallpaper">Nastavit bílé pozadí</string>
+  <string name="transparent_wallpaper_white_wallpaper_failed">Nelze nastavit</string>
+  <string name="transparent_wallpaper_white_wallpaper_success">Pozadí je nyní bílé</string>
+  <string name="transparent_wallpaper_white_wallpaper_tip">Průhledné pozadí vypadá nejlépe na bílé barvě</string>
+  <string name="video_wallpaper_import">Dotykem přidáte položky</string>
+  <string name="wallpaper_set_as_float_wallpaper">průhledné pozadí (Beta)</string>  
 </resources>
