--- a/Czech/main/Calendar.apk/res/values-cs/strings.xml
+++ b/Czech/main/Calendar.apk/res/values-cs/strings.xml
@@ -534,4 +534,12 @@
   <string name="notification_open_setting_button_ok">Povolit</string>
   <string name="notification_open_setting_message">Nebudete dostávat upozornění na události pokud nepovolíte přístup k záznamům.</string>
   <string name="notification_open_setting_title">Povolit upozornění Kalendáře?</string>  
+  <string name="accessbility_suggestion_dropdown_closed">Žádné návrhy</string>
+  <string name="accessbility_suggestion_dropdown_opened">Návrhy kontaktů povoleny</string>
+  <string name="action_label">Zpět</string>
+  <string name="address">Adresa</string>
+  <string name="chips_action_cancel">Zrušit</string>
+  <string name="chips_action_copy">Kopírovat</string>
+  <string name="chips_permission_text">Povolit návrhy kontaktů</string>
+  <string name="dropdown_delete_button_desc">Odebrat %s z adresátů</string>
 </resources>
