--- a/Czech/main/Browser.apk/res/values-cs/strings.xml
+++ b/Czech/main/Browser.apk/res/values-cs/strings.xml
@@ -1060,4 +1060,82 @@ Chcete opustit tuto stránku?"</string>
   <string name="suggestion_sliding_item_more_text">VÍCE</string>
   <string name="dialog_clipboard_tabs_action">" otevřete zde"</string>
   <string name="dialog_clipboard_tabs_tip">Zkopírované URL</string>
+  <string name="mw_miuichromium_error_page_airplane_mode">Režim Letadlo</string>
+  <string name="mw_miuichromium_error_page_airplane_mode_on">Deaktivujte režim Letadlo</string>
+  <string name="mw_miuichromium_error_page_btn_close">Zavřít</string>
+  <string name="mw_miuichromium_error_page_btn_refresh">Obnovit</string>
+  <string name="mw_miuichromium_error_page_btn_report_issue">Nahlásit chybu</string>
+  <string name="mw_miuichromium_error_page_description_no_connection" formatted="false">"Nelze se připojit k síti z důvodu slabého signálu nebo nesprávného nastavení sítě. Zkontrolujte %s1 nastavení %s2 a zkuste to znovu."</string>
+  <string name="mw_miuichromium_error_page_diagnose">Diagnostika sítě</string>
+  <string name="mw_miuichromium_error_page_diagnose_banner">Diagnostika sítě</string>
+  <string name="mw_miuichromium_error_page_diagnose_certificate">Nelze otevřít síťový protokol</string>
+  <string name="mw_miuichromium_error_page_diagnose_connection">Nelze se připojit k síti</string>
+  <string name="mw_miuichromium_error_page_diagnose_dns">Žádná URL adresa není správná</string>
+  <string name="mw_miuichromium_error_page_diagnose_protocol">Chyba síťového protokolu</string>
+  <string name="mw_miuichromium_error_page_diagnose_proxy_server">Chyba Proxy serveru</string>
+  <string name="mw_miuichromium_error_page_diagnose_success">Slabý signál sítě</string>
+  <string name="mw_miuichromium_error_page_diagnose_timeout">Platnost připojení vypršela</string>
+  <string name="mw_miuichromium_error_page_diagnose_website">Webstránka není dostupná</string>
+  <string name="mw_miuichromium_error_page_diagnosing">Kontrola sítě</string>
+  <string name="mw_miuichromium_error_page_homepage">Domů</string>
+  <string name="mw_miuichromium_error_page_mobile">Mobilní data</string>
+  <string name="mw_miuichromium_error_page_network_hijack">Současná síť není bezpečná</string>
+  <string name="mw_miuichromium_error_page_network_off">Zapněte Wi-Fi nebo mobilní data</string>
+  <string name="mw_miuichromium_error_page_no_network">Nelze se připojit k síti</string>
+  <string name="mw_miuichromium_error_page_problem_access_denied">Přístup k %s0 byl zamítnut</string>
+  <string name="mw_miuichromium_error_page_problem_cache_miss">Tuto stránku nelze načíst z cache</string>
+  <string name="mw_miuichromium_error_page_problem_cannot_open_page">Stránku nelze otevřít</string>
+  <string name="mw_miuichromium_error_page_problem_cannot_reach_site">Stránka je nedostupná</string>
+  <string name="mw_miuichromium_error_page_problem_connection_interrupted">Spojení bylo přerušeno</string>
+  <string name="mw_miuichromium_error_page_problem_file_not_found">Soubor nebyl nalezen</string>
+  <string name="mw_miuichromium_error_page_problem_gateway_timed_out">Příliš dlouhá odezva %s0</string>
+  <string name="mw_miuichromium_error_page_problem_network_access_denied">Přístup k síti je zakázán</string>
+  <string name="mw_miuichromium_error_page_problem_no_internet_connection">Nelze se připojit k síti</string>
+  <string name="mw_miuichromium_error_page_problem_page_moved">Tato stránka %s0 je zřejmě přesunuta nebo zrušena</string>
+  <string name="mw_miuichromium_error_page_problem_page_not_found">Nelze najít stránku %s0</string>
+  <string name="mw_miuichromium_error_page_problem_page_not_working">Tato stránka nefunguje</string>
+  <string name="mw_miuichromium_error_page_problem_security_error">Tato stránka nemůže poskytnout zabezpečené připojení</string>
+  <string name="mw_miuichromium_error_page_problem_server_fault">%s0 momentálně nemůže zpracovat váš požadavek</string>
+  <string name="mw_miuichromium_error_page_reason_bad_client_cert">" protože %s0 neakceptovala váš certifikát"</string>
+  <string name="mw_miuichromium_error_page_reason_bad_server_cert">". %s0 neodpovídá bezpečnostním standardům"</string>
+  <string name="mw_miuichromium_error_page_reason_blocked_by_response">. Přístup je blokovaný %s0</string>
+  <string name="mw_miuichromium_error_page_reason_connection_closed">. %s0 přerušené připojení</string>
+  <string name="mw_miuichromium_error_page_reason_connection_refused">. %s0 odmítnuté připojení</string>
+  <string name="mw_miuichromium_error_page_reason_connection_reset">. Připojení bylo obnoveno</string>
+  <string name="mw_miuichromium_error_page_reason_device_slept">" když se vaše zařízení uspalo"</string>
+  <string name="mw_miuichromium_error_page_reason_empty_response">" protože %s0 neodeslala žádná data"</string>
+  <string name="mw_miuichromium_error_page_reason_invalid_address">. IP adresa nebo port je nesprávný</string>
+  <string name="mw_miuichromium_error_page_reason_invalid_response">" protože %s0 odeslala nesprávnou odpověď"</string>
+  <string name="mw_miuichromium_error_page_reason_invalid_url">" protože URL není správná"</string>
+  <string name="mw_miuichromium_error_page_reason_moved_or_deleted">. Může být zrušena nebo přesunuta</string>
+  <string name="mw_miuichromium_error_page_reason_name_collision">. Táto stránka na intranetu má stejnou URL jako na internetu</string>
+  <string name="mw_miuichromium_error_page_reason_name_not_resolved">". Nebyl nalezen DNS záznam pro %s0"</string>
+  <string name="mw_miuichromium_error_page_reason_network_changed">" kvůli změně sítě"</string>
+  <string name="mw_miuichromium_error_page_reason_proxy_error">. Něco není v pořádku s proxy serverem nebo není adresa proxy správná</string>
+  <string name="mw_miuichromium_error_page_reason_site_unreachable">. %s0 je momentálně nedostupná</string>
+  <string name="mw_miuichromium_error_page_reason_timed_out">". %s0 dlouho neodpověděla"</string>
+  <string name="mw_miuichromium_error_page_reason_too_many_redirects">" protože %s0 vás přesměrovala mnohokrát"</string>
+  <string name="mw_miuichromium_error_page_reason_unsafe_port">. %s0 používá nezabezpečený port</string>
+  <string name="mw_miuichromium_error_page_reason_unsafe_redirect">. %s0 vás přesměrovala nebezpečným způsobem</string>
+  <string name="mw_miuichromium_error_page_reason_unsupported_protocol">. %s0 používá nepodporovaný protokol</string>
+  <string name="mw_miuichromium_error_page_reload">Obnovit</string>
+  <string name="mw_miuichromium_error_page_safe_network">Bezpečný režim</string>
+  <string name="mw_miuichromium_error_page_server_error">Mnoho zařízení se pokouší o připojení</string>
+  <string name="mw_miuichromium_error_page_suggestion_check_app_proxy">Zkontrolujte nastavení proxy ve vašem zařízení.</string>
+  <string name="mw_miuichromium_error_page_suggestion_check_connetion">Zkontrolujte vaše internetové připojení.</string>
+  <string name="mw_miuichromium_error_page_suggestion_check_mobile_proxy" formatted="false">(Mobilní data) Zkontrolujte nastavení %s1APN%s2.</string>
+  <string name="mw_miuichromium_error_page_suggestion_check_url">Zkontrolujte nastavenou URL.</string>
+  <string name="mw_miuichromium_error_page_suggestion_check_wifi_proxy" formatted="false">(Wi-Fi) Zkontrolujte nastavení %s1proxy%s2.</string>
+  <string name="mw_miuichromium_error_page_suggestion_clear_cache" formatted="false">Vymažte cache (%s1Nastavení%s2 - Vymazat cache).</string>
+  <string name="mw_miuichromium_error_page_suggestion_clear_cache_and_cookies" formatted="false">Vymažte cache a cookies (%s1Nastavení%s2 - Vymazat data).</string>
+  <string name="mw_miuichromium_error_page_suggestion_clear_cache_and_cookies_no_invoke">Vymazat cache a cookies (vaše nastavení účtů může být vymazáno).</string>
+  <string name="mw_miuichromium_error_page_suggestion_clear_cache_no_invoke">Vymazat cache</string>
+  <string name="mw_miuichromium_error_page_suggestion_connect_and_retry">Po připojení na internet, obnovte stránku</string>
+  <string name="mw_miuichromium_error_page_suggestion_contact_admin">Kontaktujte svého admina.</string>
+  <string name="mw_miuichromium_error_page_suggestion_correct_url">Zkontrolujte zadanou URL adresu a zkuste to znovu.</string>
+  <string name="mw_miuichromium_error_page_suggestion_grant_permission">Obnovte stránku po povolení přístupu na internet.</string>
+  <string name="mw_miuichromium_error_page_suggestion_title">. Zkuste následující:</string>
+  <string name="mw_miuichromium_error_page_title">Nastala chyba!</string>
+  <string name="mw_miuichromium_error_page_unknown_error">Ups... něco se pokazilo...</string>
+  <string name="mw_miuichromium_error_page_wlan">Povolit Wi-Fi</string>  
 </resources>
