--- a/Czech/main/AuthManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/AuthManager.apk/res/values-cs/strings.xml
@@ -296,4 +296,6 @@
   <string name="screen_overlay_button">Otevřít nastavení</string>
   <string name="screen_overlay_message">Pro změnu nastavení tohoto povolení, musíte nejprve vypnout překrytí displeje v Nastavení &gt; Aplikace</string>
   <string name="screen_overlay_title">Zjištěno překrytí displeje</string>
+  <string name="HIPS_Perm_UDevice_ID">Sdílet část informací o vašem zařízení s vývojáři her pro jejich lepší optimalizaci. Souhlasíte?</string>
+  <string name="HIPS_Perm_UDevice_ID_DESC">Sdílet část informací o vašem zařízení s vývojáři her pro jejich lepší optimalizaci. Souhlasíte?</string>
 </resources>
